<resources>
    <string name="app_name">Main_Activity</string>
    <string name="text_you">YOU</string>
    <string name="text_know">KNOW</string>
    <string name="text_when">WHEN</string>
    <string name="text_its">ITS</string>
    <string name="text_right">RIGHT</string>
    <string name="txt_Tagline">YOU  KNOW  WHEN  ITS  RIGHT</string>
    <string name="txt_sign_in">sign-in with phone number</string>
    <string name="txt_woo">WOO</string>
    <string name="txt_the_dating_app">THE DATING APP WOMEN LOVE</string>
    <string name="txt_private">PRIVATE</string>
    <string name="txt_secure">+ SECURE</string>
    <string name="txt_meaningful">+ MEANINGFUL</string>
    <string name="txt_we_put">We put women first.</string>
    <string name="txt_we_never">We NEVER post to Facebook ever.</string>
    <string name="txt_sign_in_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="txt_by_tapping">By tapping Sign in, you agree with our Privacy Terms.</string>
    <string name="txt_enter_mob">Enter Mobile No</string>
    <string name="hint_yourNo">Your mobile number</string>
    <string name="txt_proceed">Proceed</string>
    <string name="text_my_name">My Name</string>
    <string name="text_first_name">First Name (mandatory)</string>
    <string name="text_last_name">Last Name (optional)</string>
    <string name="text_next">NEXT</string>
    <string name="text_to_protect">To protect your privacy, we only show initials
        for Women and First Name for Men</string>
    <string name="text_my_gender">My Gender</string>
    <string name="text_I_am_a_man">I am a Man</string>
    <string name="text_I_am_a_woman">I am a Woman</string>
    <string name="text_back">BACK</string>
    <string name="text_my_birthday">My Birthday</string>
    <string name="text_dd">DD</string>
    <string name="text_mm">MM</string>
    <string name="text_yyyy">YYYY</string>
    <string name="text_enter_your_true_date_of_birth">Please enter your true date of birth hare. It will help us find you best matches fast.</string>
    <string name="text_add_your_photos">Add your photos</string>
    <string name="text_please_review_our_tips">Please review our tips to make sure your pics are approved and get liked.</string>
    <string name="text_where_do_you_want">Where do you want to add picture from?</string>
    <string name="text_gallery">GALLERY</string>
    <string name="text_facebook">FACEBOOK</string>
    <string name="text_camera">CAMERA</string>
    <string name="text_relationship_and_lifestyle">Relationship and Lifestyle</string>
    <string name="text_share">Share more about yourself to be discovered by the right people</string>
    <string name="text_relationship">Relationship</string>
    <string name="text_relationship_status">Relationship status (Select one)</string>
    <string name="text_single">#Single +</string>
    <string name="text_single_kids">#Single and with kids +</string>
    <string name="text_divorced">#Divorced +</string>
    <string name="text_divorced_kids">#Divorced and with Kids +</string>
    <string name="text_widowed">#Widowed +</string>
    <string name="text_widowed_kids">#Widowed and with Kids +</string>
    <string name="text_separated">#Separated</string>
    <string name="text_separated_kids">#Separated and with Kids +</string>
    <string name="text_what">What are you looking for on Woo (Select one)</string>
    <string name="text_relation">#Relationship +</string>
    <string name="text_something_casual">#Something casual +</string>
    <string name="text_do_not">#Do not know yet +</string>
    <string name="text_marriage">#Marriage +</string>
    <string name="text_lifestyle">Lifestyle Choices</string>
    <string name="text_smoking">Smoking/Non Smoking (Select one)</string>
    <string name="text_smoker">#Smoker +</string>
    <string name="text_non_smoker">#Non-smoker +</string>
    <string name="text_trying">#Trying to quit</string>
    <string name="text_drinking">Drinking (Select one)</string>
    <string name="text_drinks">#Drinks frequently +</string>
    <string name="text_teetotaler">#Teetotaler</string>
    <string name="text_social">#Social drinker +</string>
    <string name="text_diet">Diet (Select one)</string>
    <string name="text_vegetarian">#Vegetarian +</string>
    <string name="text_vegan">#Vegan +</string>
    <string name="text_non_vegetarian">#Non-vegetarian +</string>
    <string name="text_workout">Workout (Select one)</string>
    <string name="text_active">#Active +</string>
    <string name="text_sometimes">#Sometimes +</string>
    <string name="text_almost_never">#Almost never +</string>
    <string name="text_choose_interests">Choose interests</string>
    <string name="text_add_tags">Add tags that describe you best to meet like-minded people.</string>
    <string name="text_add">Add at least 3 tags</string>
    <string name="text_ipl">IPL +</string>
    <string name="text_hip_hop">HipHop +</string>
    <string name="text_calligraphy">Calligraphy +</string>
    <string name="text_scuba_driving">ScubaDriving +</string>
    <string name="text_democrat">Democrat +</string>
    <string name="text_no_expense">NoExpenseTraveler +</string>
    <string name="text_football">Football +</string>
    <string name="text_sculpting">Sculpting +</string>
    <string name="text_hermit">Hermit +</string>
    <string name="text_dog_person">DogPerson +</string>
    <string name="text_stay_positive">StayPositive +</string>
    <string name="text_lesbian">Lesbian +</string>
    <string name="text_dance_machine">DanceMachine +</string>
    <string name="text_pottery">Pottery +</string>
    <string name="text_politically_incorrect">PoliticallyIncorrect +</string>
    <string name="text_rap_music">RapMusic +</string>
    <string name="text_classical_music">ClassicalMusic +</string>
    <string name="text_writing">Writing +</string>
    <string name="text_bowling">Bowling +</string>
    <string name="text_witty">Witty +</string>
    <string name="text_nature_walks">NatureWalks +</string>
    <string name="text_wanderlust">Wanderlust +</string>
    <string name="text_electronic">Electronic +</string>
    <string name="text_long_walks">LongWalks +</string>
    <string name="text_about_me">About Me</string>
    <string name="text_write_about_yourself">Write about yourself...</string>
    <string name="text_up_to_300">Upto 300</string>
    <string name="text_keep_it_clean">Keep it clean! No phone, messenger details, web links, abusive or explicit content please.</string>
    <string name="text_me">Me</string>
    <string name="text_view_my_profile">View my profile</string>
    <string name="text_get_member">Get member privileges</string>
    <string name="text_likes_and_visits">Likes and Visits</string>
    <string name="text_crush">Crush Received</string>
    <string name="text_liked_profiles">Liked Profiles</string>
    <string name="text_skipped_profiles">Skipped Profiles</string>
    <string name="text_woo_globe">Woo Globe</string>
    <string name="text_woo_tips">WOO TIPS</string>
    <string name="text_all_swipe">All swipe and no talk makes dating dull.</string>
    <string name="text_go_ahead">Go ahead and chat. Even better, call from Woo Phone to not share your number</string>
    <string name="text_more_talking">More talking,</string>
    <string name="text_no_stalking">No stalking.</string>
    <string name="text_we">We show women name as initials and first name for men. Respect their privacy.</string>
    <string name="text_zero_tolerance">Zero Tolerance</string>
    <string name="text_woo_is_built">Woo is built for respect and consent. Report the ones who do not fit in.</string>
    <string name="text_be_patient">Be Patient</string>
    <string name="text_miracles">Miracles take time</string>
    <string name="text_talk_time">TALK + TIME = TRUST</string>
    <string name="text_spend_time">Spend time talking and establish trust before you ask for or share personal information</string>
    <string name="text_respect">Respect is a two way street</string>
    <string name="text_be_the_reason">Be the reason they smile, not the reason they log off the app.</string>
    <string name="text_settings">Settings</string>
    <string name="text_my_location">My location</string>
    <string name="text_woo_glob">Woo Globe</string>
    <string name="text_meet_people">Meet people across location, communities and religion with Woo Globe</string>
    <string name="text_their_distance">Their distance from me</string>
    <string name="text_age_range">Age range</string>
    <string name="text_gender_preferences">Gender preferences</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_match_and_chat">Match And Chat</string>
    <string name="text_crush_received">Crush received</string>
    <string name="text_sound_alerts">Sound alerts</string>
    <string name="text_account">Account</string>
    <string name="text_log_out">Log out</string>
    <string name="text_disable">Disable</string>
    <string name="my_name_txt">My Name</string>
    <string name="next">NEXT &gt;</string>
    <string name="fname_hint">First Name (mandatory) </string>
    <string name="lname_hint">Last Name (optional) </string>
    <string name="txt_my_gender">My Gender</string>
    <string name="txt_I_am_a_man">I am a Man</string>
    <string name="txt_I_am_a_woman">I am a Woman</string>
    <string name="txt_back"> &lt; BACK</string>
    <string name="txt_my_birthday">My Birthday</string>
    <string name="hint_DD">DD</string>
    <string name="hint_MM">MM</string>
    <string name="hint_YYYY">YYYY</string>
    <string name="txt_birthday_Description">Please enter your true date of birth here. it will help us find you best matches fast.</string>
    <string name="txt_addpic_Description">Add your photos</string>
    <string name="txt_plus_sign">+</string>
    <string name="txt_please_review_our_tips">Please review our tips to make sure your pics are approved and get liked.</string>
    <string name="txt_relationship_and_lifestyle">Relationship and Lifestyle</string>
    <string name="txt_share">Share more about yourself to be discovered by the right people</string>
    <string name="txt_relationship">Relationship</string>
    <string name="txt_relationship_status">Relationship status (Select one)</string>
    <string name="txt_single">#Single +</string>
    <string name="txt_single_kids">#Single and with kids +</string>
    <string name="txt_divorced">#Divorced +</string>
    <string name="txt_divorced_kids">#Divorced and with Kids +</string>
    <string name="txt_widowed">#Widowed +</string>
    <string name="txt_widowed_kids">#Widowed and with Kids +</string>
    <string name="txt_separated">#Separated</string>
    <string name="txt_separated_kids">#Separated and with Kids +</string>
    <string name="txt_what">What are you looking for on Woo (Select one)</string>
    <string name="txt_relation">#Relationship +</string>
    <string name="txt_something_casual">#Something casual +</string>
    <string name="txt_do_not">#Do not know yet +</string>
    <string name="txt_marriage">#Marriage +</string>
    <string name="txt_lifestyle">Lifestyle Choices</string>
    <string name="txt_smoking">Smoking/Non Smoking (Select one)</string>
    <string name="txt_smoker">#Smoker +</string>
    <string name="txt_non_smoker">#Non-smoker +</string>
    <string name="txt_trying">#Trying to quit</string>
    <string name="txt_drinking">Drinking (Select one)</string>
    <string name="txt_drinks">#Drinks frequently +</string>
    <string name="txt_teetotaler">#Teetotaler</string>
    <string name="txt_social">#Social drinker +</string>
    <string name="txt_diet">Diet (Select one)</string>
    <string name="txt_vegetarian">#Vegetarian +</string>
    <string name="txt_vegan">#Vegan +</string>
    <string name="txt_non_vegetarian">#Non-vegetarian +</string>
    <string name="txt_workout">Workout (Select one)</string>
</resources>