<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select_gender">

    <TextView
        android:id="@+id/tvMyGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_my_gender"
        android:textSize="@dimen/dp_60"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/dp_60"
        />

    <TextView
        android:id="@+id/tvMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_I_am_a_man"
        android:textSize="@dimen/dp_30"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/dp_50"

        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_I_am_a_woman"
        android:textSize="@dimen/dp_30"
        android:layout_toRightOf="@id/tvMan"
        android:paddingLeft="@dimen/dp_50"
        android:paddingTop="340dp"

        />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_back"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_next"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_alignParentRight="true"
        android:background="@color/white"
        />

</RelativeLayout>