<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".life_style_choices">

    <TextView
        android:id="@+id/tvRelation_Liftstyle"
        style="@style/txt_Relationship_life"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvshare_more_details"
        style="@style/txt_share_more_details"
        android:paddingHorizontal="@dimen/dp_30"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/viewLine"
        style="@style/view_line"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvbottomback_Relationship"
        style="@style/txt_BACKBottom"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="679dp" />

    <TextView
        android:id="@+id/tvbottomnext_Intres"
        style="@style/txt_NEXTBottom"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="679dp" />

    <ScrollView
        android:id="@+id/ScrollView1"
        style="@style/Scrol_View_Layout"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/dp_15"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            style="@style/Linear_Layout">

            <TextView
                android:id="@+id/txt_Lifestyle"
                style="@style/txt_Lifestyle"/>

            <TextView
                android:id="@+id/txt_Smoking_Non"
                style="@style/txt_Smoking_Non"/>

            <GridLayout
                android:id="@+id/GridLifestyle"
                style="@style/GridLayout_LifeChoice">


                <Button
                    android:id="@+id/btn_Smoker"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_5"
                    android:text="@string/txt_smoker"/>

                <Button
                    android:id="@+id/btn_NonSmoker"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_10"
                    android:text="@string/txt_non_smoker"/>

                <Button
                    android:id="@+id/btn_TryQuit"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="2"
                    android:paddingHorizontal="@dimen/dp_10"
                    android:text="@string/txt_trying"/>
            </GridLayout>

            <TextView
                android:id="@+id/txt_Drinking"
                style="@style/txt_Drinking"/>

            <GridLayout
                android:id="@+id/GridDrinking"
                style="@style/GridLayout_LifeChoice">

                <Button
                    android:id="@+id/btn_Drinks"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_15"
                    android:text="@string/txt_drinks"/>
                <Button
                    android:id="@+id/btn_Teetotaler"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_5"
                    android:text="@string/txt_teetotaler"/>

                <Button
                    android:id="@+id/btn_Social_Drinks"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_15"
                    android:text="@string/txt_social"/>
            </GridLayout>

            <TextView
                android:id="@+id/txt_Diet"
                style="@style/txt_Diet"/>

            <GridLayout
                android:id="@+id/GridDiet"
                style="@style/GridLayout_LifeChoice">

                <Button
                    android:id="@+id/btn_Veg"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_15"
                    android:text="@string/txt_vegetarian"/>
                <Button
                    android:id="@+id/btn_Vegan"
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_5"
                    android:text="@string/txt_vegan"/>

                <Button
                    style="@style/btn_relations"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:paddingHorizontal="@dimen/dp_15"
                    android:text="@string/txt_non_vegetarian"/>
            </GridLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>